# ChangeLog for media-gfx/fontforge
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/fontforge/ChangeLog,v 1.39 2006/10/14 09:12:28 corsair Exp $

  14 Oct 2006; Markus Rothe <corsair@gentoo.org>
  fontforge-20060703-r1.ebuild:
  Stable on ppc64; bug #146562

  01 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  fontforge-20060703-r1.ebuild:
  hppa stable, bug #146562

  26 Sep 2006; Jason Wever <weeve@gentoo.org> fontforge-20060703-r1.ebuild:
  Stable on SPARC wrt bug #146562.

  24 Sep 2006; Michael Hanselmann <hansmi@gentoo.org>
  fontforge-20060703-r1.ebuild:
  Stable on ppc.

  21 Sep 2006; <ticho@gentoo.org> fontforge-20060703-r1.ebuild:
  Stable on x86, bug #146562.

  19 Sep 2006; Daniel Gryniewicz <dang@gentoo.org>
  fontforge-20060703-r1.ebuild:
  Marked stable on amd64 bug #146562

  17 Sep 2006; Markus Rothe <corsair@gentoo.org>
  fontforge-20060703-r1.ebuild, fontforge-20060822.ebuild:
  Added ~ppc64; bug #146562

*fontforge-20060822 (25 Aug 2006)

  25 Aug 2006; Mike Frysinger <vapier@gentoo.org>
  +fontforge-20060822.ebuild:
  Version bump.

*fontforge-20060703-r1 (12 Jul 2006)

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  +fontforge-20060703-r1.ebuild:
  Install cidmaps needed for editing fonts with lots of characters, thanks to
  Sebastian Schubert #129518

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  +files/fontforge-20060406-ft22.patch, fontforge-20060406.ebuild,
  fontforge-20060408.ebuild:
  Patch 20060406 and 20060408 for building against freetype-2.2, thanks to
  David Somers in #129658. Mark 20060408 stable on ia64

  11 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  +files/fontforge-20060406-ia64.patch, fontforge-20060406.ebuild,
  fontforge-20060408.ebuild, fontforge-20060703.ebuild:
  Fix ICE building newer fontforges with gcc-3.3.2 on ia64

*fontforge-20060703 (04 Jul 2006)

  04 Jul 2006; Mike Frysinger <vapier@gentoo.org>
  +fontforge-20060703.ebuild: