@@ -1,0 +1,6 @@
+MD5 5f00607e4bbe014cdfd5b23bb0943666 cidmaps-20041222.tgz 313755
+RMD160 c25b1a4f0d8ed0634402d2ce2b36ba47e0c2ef1b cidmaps-20041222.tgz 313755
+SHA256 e0c16072d4c0fea3614073306ba243aa974a00130c5201651892950d855641f3 cidmaps-20041222.tgz 313755
+MD5 6ab890d9440601b21fa5c7267a95233d fontforge_full-20061014.tar.bz2 3574475
+RMD160 6f6c315b554b5399e78f07c7f3f8dd0b839cb160 fontforge_full-20061014.tar.bz2 3574475
+SHA256 d4367685cbef7e4355728928c16ab862893f360487d4360bdc7e8c7f8c76fe61 fontforge_full-20061014.tar.bz2 3574475
