@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/fontforge
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/fontforge/ChangeLog,v 1.39 2006/10/14 09:12:28 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/fontforge/ChangeLog,v 1.40 2006/10/17 00:04:40 vapier Exp $
+
+*fontforge-20061014 (17 Oct 2006)
+
+  17 Oct 2006; Mike Frysinger <vapier@gentoo.org>
+  +fontforge-20061014.ebuild:
+  Version bump.
 
   14 Oct 2006; Markus Rothe <corsair@gentoo.org>
   fontforge-20060703-r1.ebuild:
